--- a/talent.html
+++ b/talent.html
@@ -227,17 +227,19 @@
   <section class="talent-section">
     <div class="w-layout-blockcontainer w-container">
       <h2 class="h2-centered">Join a close-knit team of strategic doers</h2>
-      <p style="text-align: center; max-width: 800px; margin: 20px auto 30px; font-size: 18px; line-height: 1.7;">
-        At Revwisely, we help companies redesign how revenue really works—strategy, process, data, tooling, and execution. We don't sell advice in isolation. We build systems that get implemented.
-      </p>
-      <p style="text-align: center; max-width: 800px; margin: 0 auto 40px; font-size: 18px; line-height: 1.7;">
-        We partner with senior consultants, analysts, and engineers who want to do meaningful work inside complex, high-impact client environments—without the politics, churn, or theater of traditional consulting.
-      </p>
-      <p style="text-align: center; font-weight: 600; font-size: 18px; margin-bottom: 30px;">
-        If you care about outcomes more than optics, you'll feel at home here.
-      </p>
-      <div style="text-align: center;">
-        <a href="consultant-profile.html" class="button-primary-blue w-button">Complete Your Consultant Profile Today</a>
+      <div style="max-width: 720px; margin: 0 auto;">
+        <p style="text-align: center; margin: 20px 0 30px; font-size: 18px; line-height: 1.7;">
+          At Revwisely, we help companies redesign how revenue really works—strategy, process, data, tooling, and execution. We don't sell advice in isolation. We build systems that get implemented.
+        </p>
+        <p style="text-align: center; margin: 0 0 40px; font-size: 18px; line-height: 1.7;">
+          We partner with senior consultants, analysts, and engineers who want to do meaningful work inside complex, high-impact client environments—without the politics, churn, or theater of traditional consulting.
+        </p>
+        <p style="text-align: center; font-weight: 600; font-size: 18px; margin-bottom: 30px;">
+          If you care about outcomes more than optics, you'll feel at home here.
+        </p>
+        <div style="text-align: center;">
+          <a href="consultant-profile.html" class="button-primary-blue w-button">Complete Your Consultant Profile Today</a>
+        </div>
       </div>
     </div>
   </section>
@@ -464,7 +466,7 @@
   <!-- Get Started Section -->
   <style>
     .talent-cta-centered {
-      background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%) !important;
+      background: #7964ff !important;
       padding: 100px 40px !important;
       position: relative !important;
       overflow: hidden !important;
