Add CEO headshot to talent page hero section
- Move chrispreston.png to assets folder
- Update hero section to display CEO photo above quote

--- a/talent.html
+++ b/talent.html
@@ -215,7 +215,7 @@
     </div>
     <div class="talent-hero-right">
       <div style="text-align: center; margin-bottom: 20px;">
-        <img src="https://cdn.prod.website-files.com/65b7e5af87c2a7ef0406702f/65c124d86a86891759a6a690_PersonalizeCreate-e1690487795772.png" alt="Chris Preston" style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; border: 3px solid #e85a4f;"/>
+        <img src="assets/chrispreston.png" alt="Chris Preston, CEO of Revwisely" style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; border: 3px solid #e85a4f;"/>
       </div>
       <p class="talent-quote">"Our talent community is made up of individual contributors with the experience to work independently—whether you're deepening your craft or applying it more selectively over time."</p>
       <p class="talent-quote-author">Chris Preston</p>
