Update talent page styling and add Talent link to footer
- Fix hero section text centering on talent page
- Center text in work cards section
- Add padding and letter-spacing to CTA button
- Fix form input text color on consultant profile page
- Add Talent link to footer navigation across all main pages

--- a/consultant-profile.html
+++ b/consultant-profile.html
@@ -78,6 +78,8 @@
     font-size: 15px;
     font-family: 'Open Sans', sans-serif;
     transition: border-color 0.3s, box-shadow 0.3s;
+    color: #1a1a2e;
+    background-color: #fff;
   }
   .form-group input:focus,
   .form-group select:focus,
@@ -633,6 +635,7 @@
               <li class="footer-nav-item"><a href="about.html" class="footer-nav-link">Overview</a></li>
               <li class="footer-nav-item"><a href="insights-old.html" class="footer-nav-link">Blog</a></li>
               <li class="footer-nav-item"><a href="newsletter-sign-up.html" class="footer-nav-link">Newsletter</a></li>
+              <li class="footer-nav-item"><a href="talent.html" class="footer-nav-link">Talent</a></li>
             </ul>
           </div>
         </div>
