--- a/talent.html
+++ b/talent.html
@@ -86,6 +86,10 @@
     border-radius: 8px;
     padding: 30px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.08);
+    text-align: center;
+  }
+  .talent-card p {
+    text-align: center;
   }
   .talent-card-dark {
     background: rgba(255,255,255,0.05);
@@ -238,7 +242,7 @@
           If you care about outcomes more than optics, you'll feel at home here.
         </p>
         <div style="text-align: center;">
-          <a href="consultant-profile.html" class="button-primary-blue w-button">Complete Your Consultant Profile Today</a>
+          <a href="consultant-profile.html" class="button-primary-blue w-button" style="padding: 18px 40px; font-size: 16px; letter-spacing: 0.5px;">Complete Your Consultant Profile Today</a>
         </div>
       </div>
     </div>
@@ -618,6 +622,7 @@
               <li class="footer-nav-item"><a href="about.html" class="footer-nav-link">Overview</a></li>
               <li class="footer-nav-item"><a href="insights-old.html" class="footer-nav-link">Blog</a></li>
               <li class="footer-nav-item"><a href="newsletter-sign-up.html" class="footer-nav-link">Newsletter</a></li>
+              <li class="footer-nav-item"><a href="talent.html" class="footer-nav-link">Talent</a></li>
             </ul>
           </div>
         </div>
